--- a/anfisa_for_friends/templates/base.html
+++ b/anfisa_for_friends/templates/base.html
@@ -4,16 +4,18 @@
   <head>
     <link rel="icon" href="{% static 'img/fav/fav.ico' %}" type="image">
     <title>
-      {% block title %}{% endblock %}
+      {% block title %}Названия пока нет{% endblock %}
     </title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   </head>
   <body>
     {% include "includes/header.html" %}
+    <hr>
     <main>
       {% block content %}
       {% endblock %}
     </main>
+    <hr>
     {% include "includes/footer.html" %}   
   </body>
 </html>
