--- a/anfisa_for_friends/templates/includes/header.html
+++ b/anfisa_for_friends/templates/includes/header.html
@@ -1,6 +1,19 @@
 {% load static %}
+<style>
+  nav ul {
+    list-style-type: none; /* убирает маркеры списка */
+    padding: 0; /* убирает отступы */
+    margin: 10px; /* убирает отступы */
+  }
+
+  nav li {
+    display: inline; /* располагает элементы списка в одну строку */
+    margin-right: 40px; /* добавляет отступы между элементами */
+    text-decoration: none;
+  }
+</style>
 <header>
-  <img src="{% static 'img/logo.png' %}" height="50" alt="">
+  <img src="{% static 'img/logo.png' %}" height="50" alt="" style="float: right;">
   <nav>
     <ul>
       <li>
