--- a/anfisa_for_friends/templates/homepage/index.html
+++ b/anfisa_for_friends/templates/homepage/index.html
@@ -4,4 +4,8 @@
 {% endblock %}
 {% block content %}
   <h1>Главная страница</h1>
+  <hr>
+  <p>Добро пожаловать на сайт "Анфиса для друзей"!</p>
+  <p>Здесь я тестирую свой код и делаю Анфису Для друзей!</p>
+  <p><i>Попереключайтесь пожалуйста между вкладками</i></p>
 {% endblock %}
