--- a/anfisa_for_friends/templates/base.html
+++ b/anfisa_for_friends/templates/base.html
@@ -1,5 +1,9 @@
 {% load static %}
 <!DOCTYPE html>
+
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+
 <html lang="ru">
   <head>
     <link rel="icon" href="{% static 'img/fav/fav.ico' %}" type="image">
@@ -10,12 +14,10 @@
   </head>
   <body>
     {% include "includes/header.html" %}
-    <hr>
     <main>
       {% block content %}
       {% endblock %}
     </main>
-    <hr>
     {% include "includes/footer.html" %}   
   </body>
 </html>
