--- a/anfisa_for_friends/templates/includes/footer.html
+++ b/anfisa_for_friends/templates/includes/footer.html
@@ -1,3 +1,10 @@
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+
 <footer>
+  <hr>
+  <br>
   <p><center>2022 "MyKit Corp"</center></p>
 </footer> 
